# DjangoAsyncAdmin

./: .gitignore  LICENSE  MANIFEST.in  README.en_US.md  README.md  free-activator.py  local_deploy_for_test.sh  pyproject.toml  setup.py  simplepro.lic  test.py
.github/workflows/: codeql.yml
6.0.0/: __init__.py  dialog.py  requirements.txt  utils.py
6.0.0/editor/: fields.py  utils.py  views.py
6.0.0/monitor/: utils.py  views.py
6.0.0/releases/: 3.0.1.md  3.0.md
6.0.0/releases/3.1/: 3.1.md
6.0.0/templates/admin/: modal_change_form.html  timeline.html
6.0.0/templatetags/: sptags.py
6.1.0/: __init__.py  utils.py
6.1.0/editor/: widgets.py
6.1.0/management/commands/: active.py
6.1.0/templatetags/: sptags.py
6.2.0/: __init__.py  handlers.py  urls.py  utils.py
6.2.0/components/: fields.py  utils.py  widgets.py
6.2.0/management/commands/: migrate_menu.py
6.2.0/templates/admin/: change_form.html  index.html
6.2.0/templatetags/: sptags.py
6.3.1/: __init__.py  apps.py  utils.py
6.3.1/components/: widgets.py
6.3.1/templates/admin/: group.html
6.4.0/: __init__.py
6.4.0/templates/admin/: info.html
6.5.0/: __init__.py  conf.py
6.5.0/components/: fields.py
6.5.0/templates/admin/: index.html
6.5.1/: __init__.py
6.5.1/components/: fields.py
6.5.1/templatetags/: sptags.py
6.5.2/: conf.py  simplepro.lic
6.5.2/components/: widgets.py
6.5.2/encrypted-version/simplepro/: __init__.py  action.py  handlers.py  urls.py
6.5.2/plaintext-version/simplepro/: __init__.py  core.py  filters.py  forms.py  utils.py
6.5.2/templates/admin/: home.html  login.html
docs/: PAGE-0.md  PAGE-index.md  _config.yml  about.md  build.md  components.md  contact.md  index.html  index.md
docs/_layouts/: post.html
encrypted-version/simplepro/: apps.py  middlewares.py
encrypted-version/simplepro/editor/: fields.py
encrypted-version/simplepro/group/: view.py
lib/: __init__.py  rsaHelper.py
plaintext-version/simplepro/: action.py
simplepro/: __init__.py  admin.py  apps.py  conf.py  core.py  decorators.py  dialog.py  filters.py  forms.py  handlers.py  middlewares.py  models.py  urls.py  utils.py
simplepro/bawa/: views.py
simplepro/components/: fields.py  forms.py  utils.py  widgets.py
simplepro/editor/: fields.py  views.py  widgets.py
simplepro/group/: utils.py  view.py
simplepro/lib/: pkHelper.py
simplepro/monitor/: test.py  utils.py  views.py
simplepro/templatetags/: sptags.py
test/: decoder.py
(+179 files in other folders)
